# NetworkTest

./: .gitignore  CMakeLists.txt  build.sh  readme.md  wasm-build.sh  wasm-prepare.sh
Android/: .gitignore  build.gradle.kts
Android/app/: .gitignore  build.gradle.kts
Android/app/src/androidTest/java/com/grom/template/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: AndroidSoftInput.cpp  AndroidSoftInput.h  CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp
Android/app/src/main/java/com/grom/template/: MainActivity.java
Android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
Android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/grom/template/: ExampleUnitTest.java
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
GameSources/: CMakeLists.txt  ClientSprite.cpp  ClientSprite.h  GameApp.cpp  GameApp.h  GameAppInfo.cpp  GameAppInfo.h  Packets.h  shell_minimal.html  todo.md
ServerSources/: CMakeLists.txt  ServerTestApp.cpp  ServerTestApp.h  TestServer.cpp  TestServer.h  main.cpp
assets/default/: sysfont.txt
assets/default/rs/: alpha_add.txt  alpha_blend.txt  alpha_mul.txt  dlight.txt  gui.txt  gui_add.txt  gui_alpha_test.txt  gui_clamp.txt  gui_clamp_add.txt  lm.txt  mask.txt  masked.txt  mouse_arrow.txt  parts_add.txt  parts_add_noz.txt  parts_blend_noz.txt  solid.txt  text_add.txt  text_blend.txt
assets/default/viewer/: main.layout
assets/tests/fonts/: bmfont.fnt
assets/tests/layouts/: container.layout  image.layout
assets/tests/particles/: blast.txt  circle.txt  color.txt  cross.txt  fire.txt  hline.txt  point.txt  sparkle.txt  triangle.txt
